# Maat

./: .gitignore  pyproject.toml  pyright_output.txt  requirements.txt
Backend/: README.md  pyproject.toml  requirements.txt
Backend/core/: __init__.py  exceptions.py  game_runner.py  rule_validator.py  run_game.py  schemas.py  state_manager.py  validator.py
Backend/docs/: phase1_contract.md
Backend/logging/: __init__.py  logger.py
Backend/schemas/: __init__.py  game.py  log_entry.py  move.py
Backend/tests/core/: test_game_runner.py  test_rule_validator.py  test_state_manager.py  test_validator.py
configs/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  runner.yaml  starting_positions.txt
docs/: README.md
docs/architecture/: condition-graphs.md  generation-strategies.md  graph-implementation.md  runner-architecture.md  state-and-errors.md  system-overview.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/modules/: agents.md  config.md  data.md  engine.md  graphs.md  llm-client.md  metrics.md  prompts.md  tools.md  validators.md
docs/reference/: configuration.md  file-index.md  implementation_plan.md
docs/status/: docs-scripts-implementation-summary.md  implementation-status.md
docs/testing/: test-coverage-matrix.md  testing-guide.md
scripts/: filter_results.py  prompt_lab.py  prompt_lab_ui.html  puzzle_sampler.py  smoke_test.py
src/: __init__.py  config.py  context.py  error_taxonomy.py  state.py
src/agents/: __init__.py  base.py  constrained_generator.py  critic.py  (+10 more)
tests/: __init__.py  test_context.py
(+132 files in other folders)
